"Basic Layout, of Home Page, no CSS"

--- a/index.html
+++ b/index.html
@@ -36,24 +36,66 @@
 
     </header>
 
+    <section id="hearo-container">
+    <div id="hearo-image"></div>
+        <div id="hero-text">
+            <h1>Photography Playground</h1>
+            <h2>Learn Skills & Win awards</h2>
+        </div>
+    
+    </section>
+
     <section>
+        <div>card 1</div>
+        <div>card 2</div>
+        <div>card 3</div>
+    </section>
+
+    <section>
+        <h2>Win Awards</h2>
+        <div><p>We teach you amazing skills that you can put towards our monthly photography awards. You can win:</p>
+            <ul>
+                <li>£1000 each month</li>
+            </ul>
+            <ul>
+                <li>Macbook Pro 13"</li>
+            </ul>
+            <ul>
+                <li>Featured in our Newsletter</li>
+            </ul>
+        </div>
 
     </section>
 
     <section>
-
-
-    </section>
-
-    <section>
-
-    </section>
-
-    <section>
+        <form action="https://www.sendmydatahere.com" method="post"></form>
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name">
+        <label for="age">Age</label>
+        <input type="date" name="age" id="age">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email">
+        <input type="submit" value="">
+        name
+        age
+        email
+        submit
 
     </section>
 
     <footer>
+        <div>
+            <p>Contact Us!</p>
+            <p>Got any Q's? Get in Touch</p>
+            <p>0151 314 0563 | info@motionbuilt.com</p>
+
+            <div>
+                social links
+                
+            </div>
+
+
+        </div>
 
     </footer>
 
