CSS style changes, color/font

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 </head>
 <body>
-    <header>
+    <header id="header">
         <a href="index.html"><h1 id="logo">Motion Built</h1></a>
         <nav>
-            <ul>
+            <ul id="menu-bar">
                 <li>
                     <a href="#">Skills</a>
                 </li>
@@ -91,7 +91,7 @@
 
             <div>
                 social links
-                
+
             </div>
 
 
