--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     </header>
 
-    <section id="hearo-container">
-    <div id="hearo-image"></div>
+    <section id="hero-container">
+    <div id="hero-image"></div>
         <div id="hero-text">
             <h1>Photography Playground</h1>
             <h2>Learn Skills & Win awards</h2>
@@ -45,13 +45,32 @@
     
     </section>
 
-    <section>
-        <div>card 1</div>
-        <div>card 2</div>
-        <div>card 3</div>
+    <section id="skills">
+        <h1>Learn How To..</h1>
+        <div class="left-skill">
+            <div>
+                <h2>Shoot Sports</h2>
+                <hr>
+                <p>Capturing Sports is a skill to master, with high shutter speeds and flexible apatures for varying Deapth of Field</p>
+            </div>
+        </div>
+        <div class="center-skill">
+            <div>
+                <h2>Capture Wildllife</h2>
+                <hr>
+                <p>Capture the most beautiful Wildllife, in the wild, in the Safri Park or even your Local Zoo</p>
+            </div>
+        </div>
+        <div class="right-skill">
+            <div>
+                <h2>Beautiful Portraits</h2>
+                <hr>
+                <p>Human Beings are some of the most difficult images to capture, but get this skill right and you can showcase your talent.</p>
+            </div>
+        </div>
     </section>
 
-    <section>
+    <section id="about">
         <h2>Win Awards</h2>
         <div><p>We teach you amazing skills that you can put towards our monthly photography awards. You can win:</p>
             <ul>
@@ -67,7 +86,8 @@
 
     </section>
 
-    <section>
+    <section id="form">
+        <div class="form-div">
         <form action="https://www.sendmydatahere.com" method="post"></form>
         <label for="name">Name</label>
         <input type="text" name="name" id="name">
@@ -75,12 +95,8 @@
         <input type="date" name="age" id="age">
         <label for="email">Email</label>
         <input type="email" name="email" id="email">
-        <input type="submit" value="">
-        name
-        age
-        email
-        submit
-
+        <input type="submit" value="Join Us">
+    </div>
     </section>
 
     <footer>
