changes to the CSS and layout

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Motion Built</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -45,24 +46,24 @@
     
     </section>
 
-    <section id="skills">
+    <section id="skills-box">
         <h1>Learn How To..</h1>
         <div class="left-skill">
-            <div>
+            <div class="skill-text">
                 <h2>Shoot Sports</h2>
                 <hr>
                 <p>Capturing Sports is a skill to master, with high shutter speeds and flexible apatures for varying Deapth of Field</p>
             </div>
         </div>
         <div class="center-skill">
-            <div>
+            <div class="skill-text">
                 <h2>Capture Wildllife</h2>
                 <hr>
                 <p>Capture the most beautiful Wildllife, in the wild, in the Safri Park or even your Local Zoo</p>
             </div>
         </div>
         <div class="right-skill">
-            <div>
+            <div class="skill-text">
                 <h2>Beautiful Portraits</h2>
                 <hr>
                 <p>Human Beings are some of the most difficult images to capture, but get this skill right and you can showcase your talent.</p>
@@ -72,7 +73,8 @@
 
     <section id="about">
         <h2>Win Awards</h2>
-        <div><p>We teach you amazing skills that you can put towards our monthly photography awards. You can win:</p>
+        <div id="about-text">
+            <p>We teach you amazing skills that you can put towards our monthly photography awards. You can win:</p>
             <ul>
                 <li>£1000 each month</li>
             </ul>
@@ -100,17 +102,18 @@
     </section>
 
     <footer>
-        <div>
-            <p>Contact Us!</p>
-            <p>Got any Q's? Get in Touch</p>
-            <p>0151 314 0563 | info@motionbuilt.com</p>
-
-            <div>
-                social links
+        <div id="footer-div">
+            <div class="contact">
+            <h3>Contact Us!</h3>
+            <h3>Got any Q's? Get in Touch</h3>
+            <h3>0151 314 0563 | <a href="mailto:info@montionbuilt.com">info@motionbuilt.com</a></h3>
+            </div>
+            <div id="social-links">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-instagram"></a>
 
             </div>
-
-
         </div>
 
     </footer>
