media Queries Added

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                     <a href="winners.html">Winners</a>
                 </li>
                 <li>
-                    <a href="#">Skills</a>
+                    <a href="index.html#skills-box">Skills</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="index.html#about">About</a>
                 </li>
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="index.html#signup">Sign Up</a>
                 </li>
             </ul>
         </nav>
@@ -101,6 +101,9 @@
                 <li><h3><i class="fas fa-award"></i>| Photographer of the Month</h3></li>
             </ul>
         </div>
+
+        <button class="previouswinners"><a href='winners.html' alt='previous winners'>Previous Winners</a></button>
+        
     </div>
     </section>
 
