--- a/winners.html
+++ b/winners.html
@@ -24,13 +24,13 @@
                     <a href="winners.html">Winners</a>
                 </li>
                 <li>
-                    <a href="#">Skills</a>
+                    <a href="index.html#skills-box">Skills</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="index.html#about">About</a>
                 </li>
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="index.html#signupsec">Sign Up</a>
                 </li>
             </ul>
         </nav>
