Final Changes to HTML & CSS, Validation Complete

--- a/winners.html
+++ b/winners.html
@@ -66,9 +66,9 @@
             <h3>0151 314 0563 | <a href="mailto:info@montionbuilt.com">info@motionbuilt.com</a></h3>
             </div>
             <div id="social-links">
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="#" class="fa fa-instagram"></a>
+                <a href="https://www.facebook.com" class="fa fa-facebook"></a>
+                <a href="https://www.twitter.com" class="fa fa-twitter"></a>
+                <a href="https://www.instagram.com" class="fa fa-instagram"></a>
 
             </div>
         </div>
