change of links on Winners Page

--- a/winners.html
+++ b/winners.html
@@ -21,16 +21,16 @@
         <nav>
             <ul id="menu-bar">
                 <li>
-                    <a href="winners.html">Winners</a>
-                </li>
-                <li>
-                    <a href="index.html#skills-box">Skills</a>
+                    <a href="index.html#signup">Sign Up</a>
                 </li>
                 <li>
                     <a href="index.html#about">About</a>
                 </li>
                 <li>
-                    <a href="index.html#signupsec">Sign Up</a>
+                    <a href="index.html#skills-box">Skills</a> 
+                </li>
+                <li>
+                    <a href="winners.html">Winners</a>
                 </li>
             </ul>
         </nav>
