--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Motion Built</title>
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon-32x32.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/b00bb0ee1b.js" crossorigin="anonymous"></script>
 
@@ -105,19 +106,19 @@
     </section>
 
     <section class="signupsec">
-        <form action="https://formdump.codeinstitute.net/" method="post"></form>
+        <form action="https://formdump.codeinstitute.net/" method="post">
         <div id="signup">
             <h2>Sign Up</h2>
             <br>
             <p>Fill in this Form to Sign Up..</p>
             <br>
                 <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" required><br>
+                <input type="text" id="name" name="name" required ><br>
                 <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" required><br><br>
+                <input type="email" id="email" name="email" required ><br><br>
                 <button type="submit" class="signupbtn">Sign Up</button>
-            
         </div>
+        </form>   
 
     </section>
 
