--- a/winners.html
+++ b/winners.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Motion Built - Winners</title>
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon-32x32.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
