Repsoniveness for 400px and below added

--- a/winners.html
+++ b/winners.html
@@ -39,23 +39,23 @@
     </header>
 
     <section id="photos">
-        <img src="assets/images/camera on book.jpg" alt="camera on book">
-        <img src="assets/images/curly hair woman.jpg" alt="curly hair woman">
-        <img src="assets/images/flowers and fairy lights on table.jpg" alt="flowers and fairy lights on table">
-        <img src="assets/images/horse rider.jpg" alt="horse rider">
-        <img src="assets/images/hut in the sea.jpg" alt="hut in the sea">
-        <img src="assets/images/man looking into distance.jpg" alt="man looking into distance">
-        <img src="assets/images/man riding bike.jpg" alt="man riding bike">
-        <img src="assets/images/pink flowers in water.jpg" alt="pink flowers in water">
-        <img src="assets/images/pink words.jpg" alt="pink words">
-        <img src="assets/images/poppy flower.jpg" alt="poppy flower">
+        <img src="assets/images/camera-on-book.jpg" alt="camera on book">
+        <img src="assets/images/curly-hair-woman.jpg" alt="curly hair woman">
+        <img src="assets/images/flowers-and-fairy-lights-on-table.jpg" alt="flowers and fairy lights on table">
+        <img src="assets/images/horse-rider.jpg" alt="horse rider">
+        <img src="assets/images/hut-in-the-sea.jpg" alt="hut in the sea">
+        <img src="assets/images/man-looking-into-distance.jpg" alt="man looking into distance">
+        <img src="assets/images/man-riding-bike.jpg" alt="man riding bike">
+        <img src="assets/images/pink-flowers-in-water.jpg" alt="pink flowers in water">
+        <img src="assets/images/pink-words.jpg" alt="pink words">
+        <img src="assets/images/poppy-flower.jpg" alt="poppy flower">
         <img src="assets/images/portrait.jpg" alt="portrait">
-        <img src="assets/images/curly hair lady portrait.jpg" alt="woman portrait">
-        <img src="assets/images/shapes in street.jpg" alt="shapes in the street">
+        <img src="assets/images/curly-hair-lady-portrait.jpg" alt="woman portrait">
+        <img src="assets/images/shapes-in-street.jpg" alt="shapes in the street">
         <img src="assets/images/sports.jpg" alt="motor sports">
-        <img src="assets/images/white flower.jpg" alt="white flower">
+        <img src="assets/images/white-flower.jpg" alt="white flower">
         <img src="assets/images/wildlife.jpg" alt="lion roaring">
-        <img src="assets/images/yellow tram in road.jpg" alt="yellow tram in road">
+        <img src="assets/images/yellow-tram-in-road.jpg" alt="yellow tram in road">
 
     </section>
 
