Add target blank on external links

--- a/index.html
+++ b/index.html
@@ -147,25 +147,23 @@ the website -->
         </form>   
 
     </section>
+<!-- Footer Section -->
 
-<!-- Footer of the website, holding all contact information rather than have a contact us page -->
-
-    <footer class="footer">
-
-        <div id="footer-div">
-            <div class="contact">
-            <h3>Contact Us!</h3>
-            <h3>Got any Q's? Get in Touch</h3>
-            <h3>0151 314 0563 | <a href="mailto:info@montionbuilt.com">info@motionbuilt.com</a></h3>
-            </div>
-            <div id="social-links">
-                <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-                <a href="https://www.twitter.com" class="fa fa-twitter"></a>
-                <a href="https://www.instagram.com" class="fa fa-instagram"></a>
-            </div>
+<footer class="footer">
+    <div id="footer-div">
+        <div class="contact">
+        <h3>Contact Us!</h3>
+        <h3>Got any Q's? Get in Touch</h3>
+        <h3>0151 314 0563 | <a href="mailto:info@montionbuilt.com" target="_blank" >info@motionbuilt.com</a></h3>
         </div>
+        <div id="social-links">
+            <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
+            <a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a>
+            <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
 
-    </footer>
+        </div>
+    </div>
+</footer>
     
 </body>
 </html>
