Update responsiveness on gallery images

--- a/winners.html
+++ b/winners.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Motion Built"
-    content="A photography club to learn and win awards">
-    <meta
-    name="keywords"
-    content="motion built, photography, photography club, photography skills, liverpool">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Motion Built - Winners</title>
-    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon-32x32.png"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Motion Built" content="A photography club to learn and win awards">
+  <meta name="keywords" content="motion built, photography, photography club, photography skills, liverpool">
+
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Motion Built - Winners</title>
+  <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon-32x32.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
 
   <!-- 
     The navigation bar holding links and logo, link to other page opens in a new window
     and other links scroll to the section on the page
  -->
- <header id="header">
+  <header id="header">
 
-  <a href="index.html"><h1 id="logo">Motion Built</h1></a>
-  <nav>
+    <a href="index.html">
+      <h1 id="logo">Motion Built</h1>
+    </a>
+    <nav>
       <ul id="menu-bar">
-          <li>
-              <a href="index.html#signup">Sign Up</a>
-          </li>
-          <li>
-              <a href="index.html#about">About</a>
-          </li>
-          <li>
-              <a href="index.html#skills-box">Skills</a> 
-          </li>
-          <li>
-              <a href="winners.html" target="_blank">Winners</a>
-          </li>
+        <li>
+          <a href="index.html#signup">Sign Up</a>
+        </li>
+        <li>
+          <a href="index.html#about">About</a>
+        </li>
+        <li>
+          <a href="index.html#skills-box">Skills</a>
+        </li>
+        <li>
+          <a href="winners.html" target="_blank">Winners</a>
+        </li>
       </ul>
-  </nav>
+    </nav>
 
-</header>
+  </header>
 
-<!-- Gallery Section of the page -->
+  <!-- Gallery Section of the page -->
 
-<div id="photos">
+  <div id="photos">
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/car-red-at-night.jpg">
-          <img src="assets/images/car-red-at-night.jpg" alt="red car at night" width="540" height="540">
+        <a href="assets/images/car-red-at-night.jpg">
+          <img src="assets/images/car-red-at-night.jpg" alt="red car at night">
         </a>
         <div class="desc">2019 Winner - Red BMW at Night</div>
       </div>
@@ -59,8 +60,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/coral-and-fish.jpg">
-          <img src="assets/images/coral-and-fish.jpg" alt="Coral and Fish" width="540" height="540">
+        <a href="assets/images/coral-and-fish.jpg">
+          <img src="assets/images/coral-and-fish.jpg" alt="Coral and Fish">
         </a>
         <div class="desc">2019 Winner - Underwater Coral with Fish Swimming</div>
       </div>
@@ -68,8 +69,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/digital-currency.jpg">
-          <img src="assets/images/digital-currency.jpg" alt="Digital Currency Coin" width="540" height="540">
+        <a href="assets/images/digital-currency.jpg">
+          <img src="assets/images/digital-currency.jpg" alt="Digital Currency Coin">
         </a>
         <div class="desc">2017 Winner - Digital Currreny Coin</div>
       </div>
@@ -77,8 +78,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/dj-on-decks.jpg">
-          <img src="assets/images/dj-on-decks.jpg" alt="dj on decks" width="540" height="540">
+        <a href="assets/images/dj-on-decks.jpg">
+          <img src="assets/images/dj-on-decks.jpg" alt="dj on decks">
         </a>
         <div class="desc">2018 Winner - DJ on Turntables at Event</div>
       </div>
@@ -86,8 +87,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/man-at-night.jpg">
-          <img src="assets/images/man-at-night.jpg" alt="Man at Night" width="540" height="540">
+        <a href="assets/images/man-at-night.jpg">
+          <img src="assets/images/man-at-night.jpg" alt="Man at Night">
         </a>
         <div class="desc">2018 Winner - Man at night going into a Station</div>
       </div>
@@ -95,8 +96,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/man-in-smoke.jpg">
-          <img src="assets/images/man-in-smoke.jpg" alt="Man in Smoke" width="540" height="540">
+        <a href="assets/images/man-in-smoke.jpg">
+          <img src="assets/images/man-in-smoke.jpg" alt="Man in Smoke">
         </a>
         <div class="desc">2016 Winner - Self Portrait in Smoke</div>
       </div>
@@ -104,8 +105,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/man-on-couch.jpg">
-          <img src="assets/images/man-on-couch.jpg" alt="Man on Couch" width="540" height="540">
+        <a href="assets/images/man-on-couch.jpg">
+          <img src="assets/images/man-on-couch.jpg" alt="Man on Couch">
         </a>
         <div class="desc">2020 Winner - Man on Couch Portrait</div>
       </div>
@@ -113,8 +114,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/motorbike.jpg">
-          <img src="assets/images/motorbike.jpg" alt="motorbike" width="540" height="540">
+        <a href="assets/images/motorbike.jpg">
+          <img src="assets/images/motorbike.jpg" alt="motorbike">
         </a>
         <div class="desc">2020 Winner - Motorbike</div>
       </div>
@@ -122,8 +123,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/mum-book-with-child.jpg">
-          <img src="assets/images/mum-book-with-child.jpg" alt="mum with child and book" width="540" height="540">
+        <a href="assets/images/mum-book-with-child.jpg">
+          <img src="assets/images/mum-book-with-child.jpg" alt="mum with child and book">
         </a>
         <div class="desc">2020 Winner - Mum with her Child reading a book</div>
       </div>
@@ -131,8 +132,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/paint.jpg">
-          <img src="assets/images/paint.jpg" alt="paint" width="540" height="540">
+        <a href="assets/images/paint.jpg">
+          <img src="assets/images/paint.jpg" alt="paint">
         </a>
         <div class="desc">2015 Winner - Paint on a Canvas</div>
       </div>
@@ -140,8 +141,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/rocks-cactus.jpg">
-          <img src="assets/images/rocks-cactus.jpg" alt="rocks and cactus" width="540" height="540">
+        <a href="assets/images/rocks-cactus.jpg">
+          <img src="assets/images/rocks-cactus.jpg" alt="rocks and cactus">
         </a>
         <div class="desc">2015 Winner - Rocks and Cactus</div>
       </div>
@@ -149,8 +150,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/snow-boots.jpg">
-          <img src="assets/images/snow-boots.jpg" alt="snow boots" width="540" height="540">
+        <a href="assets/images/snow-boots.jpg">
+          <img src="assets/images/snow-boots.jpg" alt="snow boots">
         </a>
         <div class="desc">2021 Winner - Snow Boots on Lady</div>
       </div>
@@ -158,8 +159,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/sunset-rocks.jpg">
-          <img src="assets/images/sunset-rocks.jpg" alt="sunset and rocks" width="540" height="540">
+        <a href="assets/images/sunset-rocks.jpg">
+          <img src="assets/images/sunset-rocks.jpg" alt="sunset and rocks">
         </a>
         <div class="desc">2021 Winner - Sunset with the Rocks Framing the Sun</div>
       </div>
@@ -167,8 +168,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/tablet-on-stool.jpg">
-          <img src="assets/images/tablet-on-stool.jpg" alt="tablet on stool" width="540" height="540">
+        <a href="assets/images/tablet-on-stool.jpg">
+          <img src="assets/images/tablet-on-stool.jpg" alt="tablet on stool">
         </a>
         <div class="desc">2014 Winner - Windows tablet on a Stool</div>
       </div>
@@ -176,8 +177,8 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/tram-at-night.jpg">
-          <img src="assets/images/tram-at-night.jpg" alt="tram at night" width="540" height="540">
+        <a href="assets/images/tram-at-night.jpg">
+          <img src="assets/images/tram-at-night.jpg" alt="tram at night">
         </a>
         <div class="desc">2013 Winner - Tram at night in the City</div>
       </div>
@@ -185,33 +186,34 @@
 
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="assets/images/waves.jpg">
-          <img src="assets/images/waves.jpg" alt="waves in the sea" width="540" height="540">
+        <a href="assets/images/waves.jpg">
+          <img src="assets/images/waves.jpg" alt="waves in the sea">
         </a>
         <div class="desc">2013 Winner - Waves in the Sea</div>
       </div>
     </div>
-    
+
     <div class="clearfix"></div>
   </div>
 
-<!-- Footer Section -->
+  <!-- Footer Section -->
 
-    <footer class="footer">
-        <div id="footer-div">
-            <div class="contact">
-            <h3>Contact Us!</h3>
-            <h3>Got any Q's? Get in Touch</h3>
-            <h3>0151 314 0563 | <a href="mailto:info@montionbuilt.com">info@motionbuilt.com</a></h3>
-            </div>
-            <div id="social-links">
-                <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-                <a href="https://www.twitter.com" class="fa fa-twitter"></a>
-                <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+  <footer class="footer">
+    <div id="footer-div">
+      <div class="contact">
+        <h3>Contact Us!</h3>
+        <h3>Got any Q's? Get in Touch</h3>
+        <h3>0151 314 0563 | <a href="mailto:info@montionbuilt.com" target="_blank">info@motionbuilt.com</a></h3>
+      </div>
+      <div id="social-links">
+        <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
 
-            </div>
-        </div>
-    </footer>
+      </div>
+    </div>
+  </footer>
 
 </body>
+
 </html>
