Remove target blank on winners nav bar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ the website -->
                     <a href="index.html#skills-box">Skills</a> 
                 </li>
                 <li>
-                    <a href="winners.html" target="_blank">Winners</a>
+                    <a href="winners.html">Winners</a>
                 </li>
             </ul>
         </nav>
