--- a/winners.html
+++ b/winners.html
@@ -54,7 +54,7 @@
         <a href="assets/images/car-red-at-night.jpg">
           <img src="assets/images/car-red-at-night.jpg" alt="red car at night">
         </a>
-        <div class="desc">2019 Winner - Red BMW at Night</div>
+        <div class="desc">2019 Winner</div>
       </div>
     </div>
 
@@ -63,7 +63,7 @@
         <a href="assets/images/coral-and-fish.jpg">
           <img src="assets/images/coral-and-fish.jpg" alt="Coral and Fish">
         </a>
-        <div class="desc">2019 Winner - Underwater Coral with Fish Swimming</div>
+        <div class="desc">2019 Winner</div>
       </div>
     </div>
 
@@ -72,7 +72,7 @@
         <a href="assets/images/digital-currency.jpg">
           <img src="assets/images/digital-currency.jpg" alt="Digital Currency Coin">
         </a>
-        <div class="desc">2017 Winner - Digital Currreny Coin</div>
+        <div class="desc">2017 Winner</div>
       </div>
     </div>
 
@@ -81,7 +81,7 @@
         <a href="assets/images/dj-on-decks.jpg">
           <img src="assets/images/dj-on-decks.jpg" alt="dj on decks">
         </a>
-        <div class="desc">2018 Winner - DJ on Turntables at Event</div>
+        <div class="desc">2018 Winner</div>
       </div>
     </div>
 
@@ -90,7 +90,7 @@
         <a href="assets/images/man-at-night.jpg">
           <img src="assets/images/man-at-night.jpg" alt="Man at Night">
         </a>
-        <div class="desc">2018 Winner - Man at night going into a Station</div>
+        <div class="desc">2018 Winner</div>
       </div>
     </div>
 
@@ -99,7 +99,7 @@
         <a href="assets/images/man-in-smoke.jpg">
           <img src="assets/images/man-in-smoke.jpg" alt="Man in Smoke">
         </a>
-        <div class="desc">2016 Winner - Self Portrait in Smoke</div>
+        <div class="desc">2016 Winner</div>
       </div>
     </div>
 
@@ -108,7 +108,7 @@
         <a href="assets/images/man-on-couch.jpg">
           <img src="assets/images/man-on-couch.jpg" alt="Man on Couch">
         </a>
-        <div class="desc">2020 Winner - Man on Couch Portrait</div>
+        <div class="desc">2020 Winner</div>
       </div>
     </div>
 
@@ -117,7 +117,7 @@
         <a href="assets/images/motorbike.jpg">
           <img src="assets/images/motorbike.jpg" alt="motorbike">
         </a>
-        <div class="desc">2020 Winner - Motorbike</div>
+        <div class="desc">2020 Winner</div>
       </div>
     </div>
 
@@ -126,7 +126,7 @@
         <a href="assets/images/mum-book-with-child.jpg">
           <img src="assets/images/mum-book-with-child.jpg" alt="mum with child and book">
         </a>
-        <div class="desc">2020 Winner - Mum with her Child reading a book</div>
+        <div class="desc">2020 Winner</div>
       </div>
     </div>
 
@@ -135,7 +135,7 @@
         <a href="assets/images/paint.jpg">
           <img src="assets/images/paint.jpg" alt="paint">
         </a>
-        <div class="desc">2015 Winner - Paint on a Canvas</div>
+        <div class="desc">2015 Winner</div>
       </div>
     </div>
 
@@ -144,7 +144,7 @@
         <a href="assets/images/rocks-cactus.jpg">
           <img src="assets/images/rocks-cactus.jpg" alt="rocks and cactus">
         </a>
-        <div class="desc">2015 Winner - Rocks and Cactus</div>
+        <div class="desc">2015 Winner</div>
       </div>
     </div>
 
@@ -153,7 +153,7 @@
         <a href="assets/images/snow-boots.jpg">
           <img src="assets/images/snow-boots.jpg" alt="snow boots">
         </a>
-        <div class="desc">2021 Winner - Snow Boots on Lady</div>
+        <div class="desc">2021 Winner</div>
       </div>
     </div>
 
@@ -162,7 +162,7 @@
         <a href="assets/images/sunset-rocks.jpg">
           <img src="assets/images/sunset-rocks.jpg" alt="sunset and rocks">
         </a>
-        <div class="desc">2021 Winner - Sunset with the Rocks Framing the Sun</div>
+        <div class="desc">2021 Winner</div>
       </div>
     </div>
 
@@ -171,7 +171,7 @@
         <a href="assets/images/tablet-on-stool.jpg">
           <img src="assets/images/tablet-on-stool.jpg" alt="tablet on stool">
         </a>
-        <div class="desc">2014 Winner - Windows tablet on a Stool</div>
+        <div class="desc">2014 Winner</div>
       </div>
     </div>
 
@@ -180,7 +180,7 @@
         <a href="assets/images/tram-at-night.jpg">
           <img src="assets/images/tram-at-night.jpg" alt="tram at night">
         </a>
-        <div class="desc">2013 Winner - Tram at night in the City</div>
+        <div class="desc">2013 Winner</div>
       </div>
     </div>
 
@@ -189,7 +189,7 @@
         <a href="assets/images/waves.jpg">
           <img src="assets/images/waves.jpg" alt="waves in the sea">
         </a>
-        <div class="desc">2013 Winner - Waves in the Sea</div>
+        <div class="desc">2013 Winner</div>
       </div>
     </div>
 
